--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,25 @@
   gap: 5px;
   font-family:Verdana, Geneva, Tahoma, sans-serif
 }
+
+
+img{
+  width: 400px;
+  margin: 500px;
+  margin-top: 20px;
+  justify-items: center;
+  align-items: center;
+  height: 400px;
+  background-color: #ffffff;
+}
+
+.butt{
+  justify-items:center;
+  display: flex;
+ margin-top: 10px;
+  width: 300px;
+  border-radius: 40px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  background-color: rgb(168, 168, 168);
+}
+
